stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_entrypoints_main_has_params.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/entrypoints/main-has-params.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × main argument type is missing
   ╭─[tests/fixtures/diagnostics/entrypoints/main-has-params.ml:1:4]
 1 │ fn main(name) {
   ·    ──┬─
   ·      ╰── main arguments must be annotated as `List<String>`
 2 │   println("hello world")
   ╰────
  help: try: fn main(args: List<String>) -> i32 { 0 }
